Minimum Viable Remote Control

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <script type="text/javascript" src="js/q3glshader.js"></script>
         <script type="text/javascript" src="js/q3movement.js"></script>
 
+        <!-- Remote Control -->
+        <script type="text/javascript" src="js/remote.js"></script>
+
         <!-- Stylesheet -->
         <link href="css/q3demo.css" rel="stylesheet" type="text/css" />
     </head>
