--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script type="text/javascript" src="js/q3movement.js"></script>
 
         <!-- Remote Control -->
+        <script type="text/javascript" src="js/NDEFHelper.js"></script>
         <script type="text/javascript" src="js/remote.js"></script>
 
         <!-- Stylesheet -->
